# oncall-swaps

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/oncall_swap/: __init__.py  main.py
src/oncall_swap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/oncall_swap/adapters/opsgenie/: client.py  mock.py
src/oncall_swap/adapters/slack/: bot.py
src/oncall_swap/application/: commands.py  services.py
src/oncall_swap/domain/: models.py  time.py
src/oncall_swap/infrastructure/persistence/: in_memory.py
src/oncall_swap/infrastructure/slack_tokens/: __init__.py  file.py  in_memory.py
src/oncall_swap/ports/: directory.py  opsgenie.py  persistence.py  slack.py  slack_tokens.py
tests/: test_instant.py  test_ring_swap.py  test_service_windows.py  test_swap_offer_validation.py
