[project]
name = "oncall-swap"
version = "0.1.0"
description = "Oncall swap negotiation system with Slack and Opsgenie integrations."
authors = [{ name = "Oncall Automation" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6.0",
    "slack-bolt>=1.18.1",
    "requests>=2.32.3",
    "httpx>=0.27.0",
]

[project.scripts]
oncall-swap = "oncall_swap.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
